[gd_scene load_steps=18 format=3 uid="uid://dqxw82uj3aty2"]

[ext_resource type="Script" uid="uid://dt518i7thhfcg" path="res://player_body.gd" id="1_4flbx"]
[ext_resource type="Material" uid="uid://d27x7f8g65nms" path="res://Assets/Materiali/PlayerMat.tres" id="2_sweqy"]
[ext_resource type="Script" uid="uid://brgsrvwgtpbsv" path="res://painter.gd" id="3_hqtel"]
[ext_resource type="PackedScene" uid="uid://b1p46an15fqv3" path="res://paintDecal.tscn" id="4_hqtel"]
[ext_resource type="Script" uid="uid://c1ndexesbn02y" path="res://paint.gd" id="5_sweqy"]
[ext_resource type="BoxMesh" uid="uid://ds2ttpe5hx6p2" path="res://Assets/Materiali/PlayerPaintParticles.tres" id="6_2hs0m"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hqtel"]

[sub_resource type="BoxMesh" id="BoxMesh_i3pqv"]
material = ExtResource("2_sweqy")

[sub_resource type="SphereShape3D" id="SphereShape3D_onrkg"]
radius = 1.0

[sub_resource type="Curve" id="Curve_dw050"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_b26j0"]
curve = SubResource("Curve_dw050")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sweqy"]
emission_shape_scale = Vector3(0.58, 0.065, 0.675)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
direction = Vector3(0, 1, 1)
initial_velocity_min = 2.0
initial_velocity_max = 4.0
scale_curve = SubResource("CurveTexture_b26j0")

[sub_resource type="Curve" id="Curve_1jxqw"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_dw050"]
curve = SubResource("Curve_1jxqw")

[sub_resource type="Curve" id="Curve_2hs0m"]
_limits = [0.0, 3.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_1jxqw"]
curve = SubResource("Curve_2hs0m")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2hs0m"]
emission_shape = 3
emission_box_extents = Vector3(0.5, 0.1, 0.5)
angle_min = -27.2
angle_max = 54.3
direction = Vector3(0, 1, 1)
initial_velocity_min = 2.0
initial_velocity_max = 8.0
scale_curve = SubResource("CurveTexture_dw050")
scale_over_velocity_curve = SubResource("CurveTexture_1jxqw")
collision_mode = 1
collision_friction = 0.17
collision_bounce = 0.33

[node name="Player" type="CharacterBody3D" groups=["Player"]]
script = ExtResource("1_4flbx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_hqtel")

[node name="Pivot" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_i3pqv")
skeleton = NodePath("../..")

[node name="PaintReceiptor" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PaintReceiptor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
shape = SubResource("SphereShape3D_onrkg")

[node name="Painter" type="Node3D" parent="." node_paths=PackedStringArray("playermesh")]
script = ExtResource("3_hqtel")
decalscene = ExtResource("4_hqtel")
playermesh = NodePath("../Pivot/MeshInstance3D")

[node name="Paint" type="Node" parent="Painter"]
script = ExtResource("5_sweqy")
color = Color(0.539083, 0.596038, 0.692934, 1)
metadata/_custom_type_script = "uid://c1ndexesbn02y"

[node name="WalkParticles" type="GPUParticles3D" parent="Painter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0706837, 0)
emitting = false
amount = 10
lifetime = 0.5
process_material = SubResource("ParticleProcessMaterial_sweqy")
draw_pass_1 = ExtResource("6_2hs0m")

[node name="JumpParticles" type="GPUParticles3D" parent="Painter"]
emitting = false
amount = 15
lifetime = 0.5
one_shot = true
explosiveness = 0.9
randomness = 0.49
process_material = SubResource("ParticleProcessMaterial_2hs0m")
draw_pass_1 = ExtResource("6_2hs0m")

[connection signal="area_entered" from="PaintReceiptor" to="Painter" method="_on_paint_near"]
